# blackbox

./: README.md  alembic.ini  pyproject.toml
backend/: Dockerfile
backend/app/: config.py  main.py
backend/app/db/: models.py  session.py
backend/app/db/migrations/: env.py
backend/app/modules/artifacts/: service.py
backend/app/modules/ingestion/: service.py  validation.py
backend/app/modules/query/: service.py
backend/app/modules/replay/: service.py
backend/app/modules/security/: auth.py
backend/app/schemas/: api.py  events.py
backend/app/services/: artifact_store.py  idempotency.py  jobs.py  redaction.py  responses.py
cli/trace_cli/: main.py
docs/: 00-system-overview.md  01-architecture-and-components.md  02-canonical-trace-spec.md  03-data-storage-and-retention.md  04-capture-sdk-and-adapters.md  05-replay-fork-and-diff-engine.md  06-api-contracts.md  07-cli-spec.md  08-ui-cockpit-spec.md  09-security-privacy-compliance.md  10-operability-and-sre.md  11-test-plan-and-acceptance.md  12-rollout-roadmap.md  README.md
llm_flight_recorder.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
ops/: docker-compose.yml  env.example
sdk/python/trace_sdk/: __init__.py  adapters.py  client.py  context.py
tests/: conftest.py
tests/integration/: test_api_flow.py
tests/unit/: test_event_validation.py  test_redaction.py
web/: Dockerfile  index.html  package.json
web/src/: App.tsx  api.ts  styles.css
web/src/pages/: ReplayPage.tsx  RunDetailPage.tsx  RunListPage.tsx
worker/: Dockerfile
worker/app/: runner.py
(+1 files in other folders)
