[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "llm-flight-recorder"
version = "0.1.0"
description = "LLM flight recorder and time-travel debugger"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.32.0",
  "pydantic>=2.9.0",
  "sqlalchemy>=2.0.36",
  "alembic>=1.13.0",
  "psycopg[binary]>=3.2.0",
  "boto3>=1.35.0",
  "httpx>=0.27.0",
  "typer>=0.12.0",
  "python-dateutil>=2.9.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0",
  "pytest-cov>=5.0.0",
  "pytest-asyncio>=0.24.0",
  "ruff>=0.7.0",
  "mypy>=1.13.0",
]

[project.scripts]
trace = "cli.trace_cli.main:run"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["backend*", "worker*", "sdk*", "cli*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
pythonpath = ["."]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
